OPUSVIER-3881 Add check again

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,12 @@
     }
   },
   "scripts": {
+    "check": [
+      "Composer\\Config::disableProcessTimeout",
+      "@prepare",
+      "@cs-check",
+      "@test"
+    ],
     "check-full": [
       "Composer\\Config::disableProcessTimeout",
       "@prepare",
