--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
   ],
   "homepage": "http://www.opus-repository.org",
   "require": {
-    "zendframework/zendframework1": "1.12.*"
+    "zendframework/zendframework1": "1.12.*",
+    "symfony/console": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.24",
