--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,13 @@
   ],
   "homepage": "http://www.opus-repository.org",
   "require": {
-    "zendframework/zendframework1": "1.12.*",
+    "laminas/laminas-validator": "2.12.2",
+    "laminas/laminas-log": "2.12.0",
     "symfony/console": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.8.24",
-    "zendframework/zend-coding-standard": "~1.0.0",
+    "phpunit/phpunit": "6.5.14",
+    "laminas/laminas-coding-standard": "1.0.0",
     "phpmd/phpmd": "@stable",
     "phploc/phploc": "@stable",
     "sebastian/phpcpd": "*"
