--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,10 @@
   ],
   "homepage": "http://www.opus-repository.org",
   "require": {
+    "laminas/laminas-stdlib": "2.7.8",
     "laminas/laminas-config": "2.6.*",
-    "laminas/laminas-validator": "2.12.2",
-    "laminas/laminas-log": "2.12.0",
+    "laminas/laminas-validator": "*",
+    "laminas/laminas-log": "*",
     "symfony/console": "*"
   },
   "require-dev": {
