--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "zendframework/zend-coding-standard": "~1.0.0",
     "phpmd/phpmd": "@stable",
     "phploc/phploc": "@stable",
-    "sebastian/phpcpd": "*"
+    "sebastian/phpcpd": "*",
+    "phpmetrics/phpmetrics": "*"
   },
   "autoload": {
     "psr-4": {
@@ -60,6 +61,7 @@
     "cs-fix": "phpcbf",
     "phpmd": "phpmd src xml cleancode,unusedcode,design,naming --reportfile build/phpmd.xml --ignore-violations-on-exit",
     "phpcpd": "phpcpd . --min-lines 3 --min-tokens 30 --log-pmd build/pmd-cpd.xml --progress || true",
-    "phploc": "phploc --log-xml build/phploc.xml src"
+    "phploc": "phploc --log-xml build/phploc.xml src",
+    "metrics": "phpmetrics --report-html=build/metrics ."
   }
 }
