--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,13 +1,6 @@
 name: PHP Composer
 
-on:
-  push:
-
-  pull_request:
-    types: [ assigned, opened, synchronize, reopened ]
-
-  schedule:
-    - cron: '30 1 * * *'
+on: [push, pull_request]
 
 jobs:
   build:
