--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.24",
+    "phpunit/php-timer": "1.0.9",
     "zendframework/zend-coding-standard": "~1.0.0",
     "phpmd/phpmd": "@stable",
     "phploc/phploc": "@stable",
