--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,6 +1,12 @@
 name: PHP Composer
 
-on: [push, pull_request]
+on:
+  push:
+
+  pull_request:
+
+  schedule:
+    - cron '30 4 * * *'
 
 jobs:
   build:
