--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
   ],
   "homepage": "http://www.opus-repository.org",
   "require": {
+    "ext-mbstring": "*",
     "zendframework/zendframework1": "1.12.*",
     "symfony/console": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.24",
     "phpunit/php-timer": "1.0.9",
-    "zendframework/zend-coding-standard": "~1.0.0",
+    "laminas/laminas-coding-standard": "<2.3",
     "phpmd/phpmd": "@stable",
     "phploc/phploc": "@stable",
     "sebastian/phpcpd": "*",
