--- a/composer.json
+++ b/composer.json
@@ -65,5 +65,10 @@
     "phpcpd": "phpcpd . --min-lines 3 --min-tokens 30 --log-pmd build/pmd-cpd.xml --progress || true",
     "phploc": "phploc --log-xml build/phploc.xml src",
     "metrics": "phpmetrics --report-html=build/metrics --junit=build/phpunit.xml ."
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
