--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "symfony/console": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "4.8.24",
+    "phpunit/phpunit": "6.*",
     "phpunit/php-timer": "1.0.9",
     "laminas/laminas-coding-standard": "<2.3",
     "phpmd/phpmd": "@stable",
