--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
     "symfony/console": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "6.*",
-    "laminas/laminas-coding-standard": "<2.3",
+    "phpunit/phpunit": "8.*",
+    "laminas/laminas-coding-standard": "*",
     "phpmd/phpmd": "@stable",
     "phploc/phploc": "@stable",
     "sebastian/phpcpd": "*",
