--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "symfony/console": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "8.*",
+    "phpunit/phpunit": "<9",
     "laminas/laminas-coding-standard": "*",
     "phpmd/phpmd": "@stable",
     "phploc/phploc": "@stable",
