--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,15 @@
   },
   "require-dev": {
     "phpunit/phpunit": "<9",
-    "laminas/laminas-coding-standard": "*",
+    "opus4-repo/codesniffer": "dev-laminas",
+    "squizlabs/php_codesniffer": "*",
     "phpmd/phpmd": "@stable",
     "phploc/phploc": "@stable",
     "sebastian/phpcpd": "*",
     "phpmetrics/phpmetrics": "*"
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "autoload": {
     "psr-4": {
       "Opus\\Common\\": "src/"
