--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "homepage": "http://www.opus-repository.org",
   "require": {
     "ext-dom": "*",
+    "ext-json": "*",
     "ext-mbstring": "*",
     "opus4/zf1-future": "1.21.*",
     "symfony/console": "*"
