--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
   "require": {
     "ext-dom": "*",
     "ext-mbstring": "*",
+    "ext-fileinfo": "*",
     "opus4/zf1-future": "1.21.*",
-    "symfony/console": "*"
+    "symfony/console": "*",
+    "symfony/mime": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "<9",
