--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
   ],
   "homepage": "http://www.opus-repository.org",
   "require": {
+    "php": ">=8.1",
     "ext-dom": "*",
     "ext-json": "*",
     "ext-mbstring": "*",
@@ -17,7 +18,7 @@
     "symfony/mime": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "<9",
+    "phpunit/phpunit": "10.5.35",
     "opus4-repo/codesniffer": "dev-laminas",
     "squizlabs/php_codesniffer": "*",
     "phpmd/phpmd": "@stable",
